--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vuex-hook",
+  "name": "vuex-in-react",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,10 @@
     "watch": "tsc -w"
   },
   "keywords": [
-    "TypeScript"
+    "TypeScript",
+    "React",
+    "Vue",
+    "Vuex"
   ],
   "license": "MIT",
   "files": [
