--- a/demo/package.json
+++ b/demo/package.json
@@ -13,10 +13,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "vuex-in-react": "file:../../vuex-in-react",
+    "serialize-javascript": "^2.1.2",
     "typescript": "~3.7.2",
     "vue": "^2.6.10",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-in-react": "file:../../vuex-in-react"
   },
   "scripts": {
     "start": "react-scripts start",
